Atividade abrir exemplo

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".AtividadeAbrirExemplo"
+            android:label="@string/atividade_abrir_exemplo"
+            android:parentActivityName=".AtividadePrincipal"></activity>
+        <activity
             android:name=".AtividadeConsole"
             android:label="@string/atividade_console"
             android:parentActivityName=".AtividadePrincipal" />
