--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "0.1.0-beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        setProperty("archivesBaseName", applicationId + "-" + versionName)
     }
     buildTypes {
         release {
