--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
+            android:launchMode="singleTop"
             android:theme="@style/TemaDoAplicativo.NavDrawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
