--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,13 @@ android {
         def documentsAuthorityValue = applicationId + ".documents"
         buildConfigField "String", "DOCUMENTS_AUTHORITY", "\"${documentsAuthorityValue}\""
 
+        def extensaoDeArquivo = ".por"
+        buildConfigField "String", "EXTENSAO_DE_ARQUIVO", "\"${extensaoDeArquivo}\""
+
         // https://stackoverflow.com/a/50860943/1657502
         manifestPlaceholders = [documentsAuthority: documentsAuthorityValue,
-                                filesAuthority: filesAuthorityValue]
+                                filesAuthority: filesAuthorityValue,
+                                extensaoDeArquivo: extensaoDeArquivo]
     }
     buildTypes {
         release {
